Ensured that the page looks good on mobile and desktop. #1

--- a/css/layout.css
+++ b/css/layout.css
@@ -1,11 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap');
 
+body {
+  color: #925d3b;
+  font-family: 'Noto Sans', sans-serif;
+}
+
 .hidden {
   display: none !important;
 }
 
 .main-container {
-  max-width: 500px;
+  max-width: 650px;
   margin: 0 auto;
   position: relative;
   height: 100vh;
@@ -17,30 +22,7 @@
   flex-wrap: wrap;
 }
 
-.column {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-body {
-  color: #925d3b;
-  font-family: 'Noto Sans', sans-serif;
-}
-
 @media screen and (min-width: 668px) {
-  .main-container {
-    max-width: 850px;
-  }
-
-  h1 {
-    font-size: 2.8rem;
-  }
-
-  .hero-text-wrapper {
-    width: 540px;
-  }
-
   .question-image {
     max-width: 550px;
   }
@@ -48,7 +30,15 @@ body {
 
 @media screen and (min-width: 992px) {
   .main-container {
-    max-width: 1000px;
+    max-width: 1200px;
+  }
+
+  h1 {
+    font-size: 2.8rem;
+  }
+
+  .hero-text-wrapper {
+    width: 600px;
   }
 
   .column-half {
@@ -56,9 +46,5 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-  }
-
-  .question-container {
-    margin: 2.5rem 0;
   }
 }
